--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "apikey": "",
-    "bot_token": "",
-    "owner": "LoL Human",
-    "ownerLink": "https://t.me/LoLHumen",
+    "bot_token": "6563046576:AAFhauEJKTSzCrdEwxAi6V8If0NhNLnu2c4",
+    "owner": "Zippy & Zxvyns",
+    "ownerLink": "https://t.me/z1ppyz",
     "version": "1.1.0",
     "prefix": "/"
 }
