--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"lib": "lib"
 	},
 	"dependencies": {
+		"axios": "^1.5.1",
 		"chalk": "^4.1.0",
+		"cheerio": "^1.0.0-rc.12",
+		"express": "^4.18.2",
 		"node-fetch": "^2.6.1",
 		"telegraf": "^4.3.0"
 	},
-	"devDependencies": {},
 	"scripts": {
 		"start": "node index.js"
 	},
@@ -29,5 +31,8 @@
 	"bugs": {
 		"url": "https://github.com/LoL-Human/TelegramBot-NodeJS/issues"
 	},
-	"homepage": "https://github.com/LoL-Human/TelegramBot-NodeJS#readme"
+	"homepage": "https://github.com/LoL-Human/TelegramBot-NodeJS#readme",
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
