--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "apikey": "",
-    "bot_token": "6563046576:AAFhauEJKTSzCrdEwxAi6V8If0NhNLnu2c4",
+    "bot_token": "",
     "owner": "Zippy & Zxvyns",
     "ownerLink": "https://t.me/z1ppyz",
     "version": "1.1.0",
