--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
-    "apikey": "",
     "bot_token": "",
-    "owner": "Zippy & Zxvyns",
-    "ownerLink": "https://t.me/z1ppyz",
+    "owner": "Senz",
+    "ownerLink": "https://t.me/senzv1",
     "version": "1.1.0",
     "prefix": "/"
 }
