--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "bot_token": "",
-    "owner": "Senz",
-    "ownerLink": "https://t.me/senzv1",
+    "bot_token"7164751351:AAEDUgr3IhwPN9BaubCY6drE9_Vx7caGQPU",
+    "owner": "Skggupta2",
+    "ownerLink": "t.me/Skggupta2",
     "version": "1.1.0",
     "prefix": "/"
 }
