--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "bot_token"7164751351:AAEDUgr3IhwPN9BaubCY6drE9_Vx7caGQPU",
+    "bot_token"7164751351:AAEDUgr3IhwPN9BaubCY6drE9_Vx7caGQPU "",
     "owner": "Skggupta2",
     "ownerLink": "t.me/Skggupta2",
     "version": "1.1.0",
